<resources>
    <string name="app_name">Training diary</string>
    <string name="Last_training_above">Last training above</string>
    <string name="Last_training_below">Last training below</string>
    <string name="names_exercise">Names exercise</string>
    <string name="comment">Comment</string>
    <string name="add_weight">Add Weight</string>
    <string name="remove_weight">Remove Weight</string>
    <string name="weight_kg">Weight, kg</string>
    <string name="add_quantity">Add Quantity</string>
    <string name="remove_quantity">Remove Quantity</string>
    <string name="reoccurrences">Reoccurrences</string>
    <string name="add_approach">Add approach</string>
    <string name="edit_exercise">Edit exercise</string>
    <string name="save">Save</string>
    <string name="add_to_set">Add to set</string>
    <string name="delete_from_set">Delete from Set</string>
    <string name="optional">Optional</string>
    <string name="your_weight_kg">Your weight, kg</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="perpetual">Perpetual</string>
    <string name="unlimited">Unlimited</string>
    <string name="number_of_training_sessions">Number of training sessions</string>
    <string name="valid_until">Valid until</string>
    <string name="season_ticket">Season ticket</string>
    <string name="reset">Reset</string>
    <string name="remained_trainings">Remained trainings</string>
    <string name="remained_days">Remained days</string>
    <string name="is_valid_until">is valid until</string>
    <string name="edit_training">Edit Training</string>
    <string name="information">Information</string>
    <string name="default_values">Default values</string>
    <string name="sorting_your_training_sessions">Sorting your training sessions</string>
    <string name="exercises">Exercises</string>
    <string name="muscle_groups">Muscle groups</string>
    <string name="backup_data">Backup data</string>
    <string name="add_n_default_n_values">Add\n default\n values</string>
    <string name="set_up_exercises_for_autofill">Set up exercises for autofill</string>
    <string name="return_settings">Return settings</string>
    <string name="add_muscle_groups">Add muscle groups</string>
    <string name="data_save_restore">Data save / restore</string>
    <string name="settings">settings</string>
    <string name="subscription_training_list">subscription training list</string>
    <string name="add_trainings">Add trainings</string>
    <string name="remove">remove</string>
    <string name="swap">Swap</string>
    <string name="press_back">Press \"back\" again to exit</string>
    <string name="weight">%1$s kg</string>
    <string name="weight1">%1$s kg |</string>
    <string name="training_was_delete">Training was delete</string>
    <string name="undo">Undo</string>
    <string name="add_exercise">Add exercise</string>
    <string name="the_name_muscle_group_is_empty">The name muscle group is empty</string>
    <string name="the_weight_and_reoccurrence_fields_are_empty">The weight and recurrence fields are empty</string>
    <string name="reoccurrences_were_saved">Reoccurrences were saved</string>
    <string name="weight_was_saved">Weight was saved</string>
    <string name="default_values_were_saved">Default values were saved</string>
    <string name="title_recover_dialog">You sure that you want to recover muscle groups default values?</string>
    <string name="message_recover_dialog">The current settings will be lost</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="last_day">last day</string>
    <string name="Term_season_ticket">Term in  season ticket cannot be less current date</string>
    <string name="number_of_training">The number of trainings can not be less than 1</string>
    <string name="exercise_was_delete">Exercise was delete</string>
    <string name="approach">%1s kg x %2s</string>
    <string name="exercise_name_is_empty">Exercise name  is empty</string>
    <string name="exercise_autofill">Exercise autofill</string>
    <string name="Settings">Settings</string>
    <string name="list_trainings">List trainings</string>
    <string name="about_application">About application</string>
    <string name="email_address" translatable="false"><u>Vangertorn@yandex.ru</u></string>
    <string name="subject">About Training diary application</string>
    <string name="Chose_an_email_client">Chose an email client</string>
    <string name="application_label">application label</string>
    <string name="training_diary">Training diary</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="leave_a_review_in_google_play">Leave a review in Google Play</string>
    <string name="developed_by_k_yankin">© Developed by K. Yankin</string>
    <string name="legs">Legs</string>
    <string name="all_muscle_groups">All muscle groups</string>
    <string name="breast">Breast</string>
    <string name="biceps">Biceps</string>
    <string name="shoulders">Shoulders</string>
    <string name="back">Back</string>
    <string name="triceps">Triceps</string>


</resources>