<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave_season_ticket"
        android:layout_width="0dp"
        style="@style/MyButton"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckedTextView
        android:id="@+id/ctvPerpetual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checked="false"
        android:gravity="center"
        android:text="@string/perpetual"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/btnSave_season_ticket"
        app:layout_constraintEnd_toStartOf="@id/ctvUnlimited"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckedTextView
        android:id="@+id/ctvUnlimited"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checked="false"
        android:gravity="center"
        android:text="@string/unlimited"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/btnSave_season_ticket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ctvPerpetual" />

    <ImageButton
        android:id="@+id/ibAddQuantity"
        style="@style/AddRemoveImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_plus"
        app:layout_constraintBottom_toBottomOf="@id/etReoccurrence"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/etReoccurrence"
        android:contentDescription="@string/add_quantity" />

    <ImageButton
        android:id="@+id/ibRemoveQuantity"
        style="@style/AddRemoveImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_minus"
        app:layout_constraintBottom_toBottomOf="@id/etReoccurrence"
        app:layout_constraintEnd_toStartOf="@+id/etReoccurrence"
        app:layout_constraintTop_toTopOf="@id/etReoccurrence"
        android:contentDescription="@string/remove_quantity" />

    <EditText
        android:id="@+id/etReoccurrence"
        style="@style/EditNumberStyle"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:maxLength="2"
        app:layout_constraintBottom_toTopOf="@id/ctvPerpetual"
        app:layout_constraintEnd_toStartOf="@id/ibAddQuantity"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        style="@style/MyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_training_sessions"
        app:layout_constraintBottom_toBottomOf="@id/etReoccurrence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/etReoccurrence" />

    <com.example.trainingdiary.support.CalendarView
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:ivLeft_color="@color/crimson"
        app:ivRight_color="@color/crimson"
        app:layout_constraintBottom_toTopOf="@id/etReoccurrence"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:month_text_color="@color/crimson"
        app:month_text_size="20sp"
        app:selected_day_background="@drawable/background_color"
        app:selected_day_text_color="@color/white"
        app:today_background="@drawable/background_today_calendar" />

    <TextView
        android:id="@+id/tvText"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/valid_until"
        app:layout_constraintBottom_toTopOf="@id/calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvText1"
        style="@style/MyTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/season_ticket"
        android:textColor="@color/crimson"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/tvText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>